Implement person retrieval infra
